# textree

./: .gitattributes  .gitignore  LICENSE  README.md  note.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-fix-report.md  task-1-report.md  task-6-report.md  task-7-report.md
e2e/: README.md  ask.spec.ts  attachment.spec.ts  chat.spec.ts  editing.spec.ts  folder-table.spec.ts  frontmatter.spec.ts  helpers.ts  keybinding.spec.ts  layout.spec.ts  livepreview.spec.ts  onboarding.spec.ts  pagedetail.spec.ts  palette.spec.ts  publish.spec.ts  reading.spec.ts  search.spec.ts  semantic.spec.ts  settings.spec.ts  sidecar-ux.spec.ts  smoke.spec.ts  structure.spec.ts  sync-conflict.spec.ts  sync.spec.ts  theme.spec.ts  trash.spec.ts  tree.spec.ts  wikilink.spec.ts
scripts/: assemble-canopy-sidecar.ps1  assemble-host-sidecar.ps1
src-host/: .gitignore  Directory.Build.props  Directory.Packages.props  TextreeHost.slnx  publish.ps1
src-host/fixtures/: root-note.md
src-host/fixtures/sub/: sub-note.md
src-host/src/Textree.Host/: Program.cs  Textree.Host.csproj  TextreeHostOptions.cs
src-host/tests/Textree.Host.Tests/: ChatEndpointTests.cs  EmbedderLazyTests.cs  HealthDownloadTests.cs  LocalTextGeneratorInitTests.cs  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/scripts/: sign-windows.ps1
src-tauri/src/: commands.rs  fs_ops.rs  host.rs  lib.rs  main.rs  pathsafe.rs  process_ext.rs  publish.rs  search.rs  self_write.rs  vault.rs  watcher.rs
src-tauri/src/telemetry/: config.rs  envelope.rs  event.rs  mod.rs
src-tauri/windows/: hooks.nsh
src/lib/: AskPanel.svelte  Backlinks.svelte  ChatView.svelte  Editor.svelte  FolderTable.svelte  Icon.svelte  PageHeader.svelte  Palette.svelte  RelatedNotes.svelte  Settings.svelte  Trash.svelte  TreeView.svelte  UpdateBanner.svelte  aiConsent.ts  aiHost.helpers.test.ts  aiHost.helpers.ts  aiHost.svelte.ts  ask.helpers.test.ts  ask.helpers.ts  askStore.svelte.ts  backlinkStore.svelte.ts  chatStore.svelte.ts  commands.test.ts  commands.ts  emptyState.ts  eol.helpers.test.ts  eol.helpers.ts  folderTable.helpers.test.ts  folderTable.helpers.ts  friendlyError.helpers.test.ts  friendlyError.helpers.ts  frontmatter.helpers.test.ts  frontmatter.helpers.ts  fuzzy.test.ts  fuzzy.ts  h1sync.helpers.test.ts  h1sync.helpers.ts  ipc.ts  keybinding.helpers.test.ts  keybinding.helpers.ts  (+39 more)
src/routes/: +layout.svelte  +page.svelte
(+27 files in other folders)
