[package]
name = "textree"
version = "0.2.3"
description = "로컬 파일시스템 기반 노트 앱"
authors = ["iyulab"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "textree_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.7.1"
# 원자적 노트 저장(temp+rename)에 사용 — 쓰기 중 크래시 시 truncation 방지.
tempfile = "3"
notify-debouncer-full = "0.7.0"
# 첨부(이미지) 붙여넣기 — base64 문자열로 IPC 전달된 바이너리를 디코드.
base64 = "0.22"
# 로컬 본문 전문검색 인덱스(P1b). ngram 토크나이저로 한글 부분일치.
tantivy = "0.22"
# 볼트 루트 경로 → 인덱스 디렉터리 식별 해시.
sha2 = "0.10"
tauri-plugin-process = "2.3.1"
# Lightweight blocking HTTP for loopback sidecar health-check; no TLS needed.
ureq = { version = "2.10", features = ["json"] }
# Structured logging to the OS app log directory (app_log_dir). The `log` facade
# (log::info!/warn!/error!) is used at call sites; the plugin wires the backend.
log = "0.4"
tauri-plugin-log = "2"

[target."cfg(windows)".dependencies]
tauri-plugin-updater = "2.10.1"

